# pruna-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SPEC.md  pyproject.toml  server.json  smithery.json
.github/workflows/: ci.yml  publish.yml
.kiro/: memory-scope.json
claude-skill/: SKILL.md
docs/: blog-en.md  blog-fr.md
power-pruna/: POWER.md  README.md  mcp.json
power-pruna/steering/: image-editing.md  image-generation.md  model-selection.md  video-generation.md
src/pruna_mcp_server/: __init__.py  __main__.py  client.py  config.py  models.py  prompts.py  server.py
tests/: conftest.py  test_client.py  test_config.py  test_mcp_protocol.py  test_models.py  test_prompts.py  test_resources.py  test_server.py
