[project]
name = "pruna-mcp-server"
version = "0.1.0"
description = "MCP server for Pruna AI — Image generation, editing, upscaling, and video generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "pruna", "ai", "image-generation", "video-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.6.0,<2",
    "httpx>=0.27.0,<1",
    "python-dotenv>=1.0.0,<2",
]

[project.urls]
homepage = "https://github.com/charlesrapp/pruna-mcp-server"
repository = "https://github.com/charlesrapp/pruna-mcp-server"
issues = "https://github.com/charlesrapp/pruna-mcp-server/issues"

[project.scripts]
pruna-mcp = "pruna_mcp_server.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pruna_mcp_server"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["pruna_mcp_server"]

[tool.coverage.report]
fail_under = 90
